--- a/assets/templates/body/body.template.html
+++ b/assets/templates/body/body.template.html
@@ -1,4 +1,6 @@
-<ul *ngFor="let item of d">
+<div (getVal)="valueChange($event)" >Here</div>
+
+<!-- <ul *ngFor="let item of d">
 	<li>{{ item.domain }}</li>
-</ul>
+</ul> -->
 <my-app></my-app>
